[gd_scene load_steps=6 format=3 uid="uid://v1iw3tpcfdct"]

[ext_resource type="Theme" uid="uid://56an2mymekb2" path="res://addons/uml/ui/node/uml_node_theme.tres" id="1_uk4t6"]
[ext_resource type="Script" path="res://addons/uml/ui/node/class/members/argument.gd" id="1_uw22k"]
[ext_resource type="PackedScene" uid="uid://b2q00jwnkp0aa" path="res://addons/uml/ui/shortcut_handler.tscn" id="3_b8vgf"]

[sub_resource type="InputEventKey" id="InputEventKey_2ru06"]
device = -1
ctrl_pressed = true
keycode = 4194312

[sub_resource type="Shortcut" id="Shortcut_gr8er"]
events = [SubResource("InputEventKey_2ru06")]

[node name="Argument" type="HBoxContainer"]
theme = ExtResource("1_uk4t6")
script = ExtResource("1_uw22k")
_default_name = "arg"
_default_type = "Type"

[node name="Name" type="LineEdit" parent="."]
layout_mode = 2
mouse_filter = 1
text = "arg"
expand_to_text_length = true
context_menu_enabled = false
select_all_on_focus = true

[node name="Colon" type="Label" parent="."]
layout_mode = 2
text = " : "

[node name="Type" type="LineEdit" parent="."]
layout_mode = 2
mouse_filter = 1
text = "Type"
expand_to_text_length = true
context_menu_enabled = false
select_all_on_focus = true

[node name="DestroyShortcutHandler" parent="." node_paths=PackedStringArray("shortcut_context") instance=ExtResource("3_b8vgf")]
layout_mode = 2
shortcut_context = NodePath("..")
_shortcut = SubResource("Shortcut_gr8er")

[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="text_changed" from="Name" to="." method="_on_name_text_changed"]
[connection signal="text_changed" from="Type" to="." method="_on_type_text_changed"]
[connection signal="shortcut_handled" from="DestroyShortcutHandler" to="." method="queue_free"]
